[gd_scene load_steps=17 format=3 uid="uid://brpchscvx718h"]

[ext_resource type="Script" uid="uid://cpi8niib1xvc0" path="res://modules/character_base/character_base.gd" id="1_ddh4f"]
[ext_resource type="Script" uid="uid://vbhqxfae40xq" path="res://addons/godot_gameplay_systems/attributes_and_abilities/nodes/gameplay_attribute_map.gd" id="2_g6arn"]
[ext_resource type="Script" uid="uid://b5ll8ceneq87" path="res://addons/godot_gameplay_systems/attributes_and_abilities/resources/attribute.gd" id="3_cskhr"]
[ext_resource type="Resource" path="res://modules/shared/resources/character_attributes.tres" id="4_3l4xq"]
[ext_resource type="Script" uid="uid://b4ffyyla852rm" path="res://addons/godot_gameplay_systems/attributes_and_abilities/nodes/ability_container.gd" id="5_3hqd5"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_3lixb"]
friction = 0.0
bounce = 0.1

[sub_resource type="CircleShape2D" id="CircleShape2D_base"]
radius = 8.0

[sub_resource type="Resource" id="Resource_kxsje"]
script = ExtResource("3_cskhr")
attribute_name = "strength"
minimum_value = 0.0
maximum_value = 0.0
current_value = 0.0

[sub_resource type="Resource" id="Resource_8k6m2"]
script = ExtResource("3_cskhr")
attribute_name = "dexterity"
minimum_value = 0.0
maximum_value = 0.0
current_value = 0.0

[sub_resource type="Resource" id="Resource_rydr8"]
script = ExtResource("3_cskhr")
attribute_name = "intelligence"
minimum_value = 0.0
maximum_value = 0.0
current_value = 0.0

[sub_resource type="Resource" id="Resource_pb6tw"]
script = ExtResource("3_cskhr")
attribute_name = "health"
minimum_value = 0.0
maximum_value = 0.0
current_value = 0.0

[sub_resource type="Resource" id="Resource_pdxlr"]
script = ExtResource("3_cskhr")
attribute_name = "mana"
minimum_value = 0.0
maximum_value = 0.0
current_value = 0.0

[sub_resource type="Resource" id="Resource_1ofww"]
script = ExtResource("3_cskhr")
attribute_name = "movement_speed"
minimum_value = 0.0
maximum_value = 0.0
current_value = 0.0

[sub_resource type="Resource" id="Resource_cabvr"]
script = ExtResource("3_cskhr")
attribute_name = "attack"
minimum_value = 0.0
maximum_value = 0.0
current_value = 0.0

[sub_resource type="Resource" id="Resource_7bvkv"]
script = ExtResource("3_cskhr")
attribute_name = "crit_chance"
minimum_value = 0.0
maximum_value = 0.0
current_value = 0.0

[sub_resource type="Resource" id="Resource_1pi0t"]
script = ExtResource("3_cskhr")
attribute_name = "defense"
minimum_value = 0.0
maximum_value = 0.0
current_value = 0.0

[node name="CharacterBase" type="RigidBody2D"]
collision_layer = 2
collision_mask = 3
mass = 1.5
physics_material_override = SubResource("PhysicsMaterial_3lixb")
gravity_scale = 0.0
lock_rotation = true
contact_monitor = true
max_contacts_reported = 4
linear_damp = 5.0
script = ExtResource("1_ddh4f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_base")

[node name="GameplayAttributeMap" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_g6arn")
owning_character = NodePath("..")
attributes = Array[ExtResource("3_cskhr")]([SubResource("Resource_kxsje"), SubResource("Resource_8k6m2"), SubResource("Resource_rydr8"), SubResource("Resource_pb6tw"), SubResource("Resource_pdxlr"), SubResource("Resource_1ofww"), SubResource("Resource_cabvr"), SubResource("Resource_7bvkv"), SubResource("Resource_1pi0t")])
table = ExtResource("4_3l4xq")

[node name="AbilityContainer" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("5_3hqd5")
